--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,6 +9,9 @@
     "wdth" 100;
 }
 /* primary color */
+.secondary-background{
+    background-color: whitesmoke;
+}
 .text-primary{
     color: gold;
 }
@@ -24,6 +27,19 @@
     color: white;
     padding: 18px 35px;
     border-radius: 5px;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: gold;
+}
+.section-description{
+    font-size: 20px;
+    color: gold;
+}
+
+.text-center{
+    text-align: center;
 }
 .header{
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
@@ -78,4 +94,78 @@ nav li a {
 }
 .banner-profile-pic{
     width: 580px;
+}
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* about styles */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-description{
+    font-weight: 600;
+}
+
+/* skills section style */
+.skills-container{
+    display: flex;
+    gap: 24px;
+
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0px 6px 50px 0px gold;
+}
+/* resume section styles */
+.resume-colum{
+    display: flex;
+    gap: 24px;
+}
+.experience-description, .experience-sub-title{
+    color: gold;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.resume hr{
+    margin: 20px 5px;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
+/* footer style */
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+
+}
+
+.footer-column{
+    width: 50%;
+}
+footer input[type="text"], footer input [type="emial"], footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: whitesmoke;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
 }
